renamed method, refactored to toList()